# rho

./: .gitignore  Cargo.toml  Makefile  README.md  config.toml  pyproject.toml
scripts/: build-agent-server.sh  install.sh
src/: cli.rs  lib.rs  main.rs
src/client/: api.rs  mod.rs  websocket.rs
src/config/: keybindings.rs  mod.rs  theme.rs
src/events/: mod.rs
src/handlers/: commands.rs  input.rs  mod.rs  settings.rs  slash.rs
src/headless/: mod.rs
src/state/: conversations.rs  events.rs  helpers.rs  llm.rs  metrics.rs  mod.rs  modals.rs  settings.rs  types.rs
src/ui/: command_menu.rs  confirmation.rs  file_menu.rs  formatting.rs  help_modal.rs  input.rs  layout.rs  markdown.rs  messages.rs  mod.rs  path_utils.rs  settings_modal.rs  spinner.rs  startup_modal.rs  status.rs  tasks.rs  theme.rs  token_modal.rs
src/ui/modals/: confirmation.rs  exit.rs  frame.rs  help.rs  mod.rs  resume.rs  settings.rs  skills.rs  startup.rs  tabs.rs  theme.rs  token.rs  tools.rs
src/web/: mod.rs
tests/snapshots/: mod.rs  render_snapshots.rs
tests/snapshots/snapshots/: tests__snapshots__render_snapshots__snapshot_input_bash_mode.snap  tests__snapshots__render_snapshots__snapshot_input_command_hint_btw.snap  tests__snapshots__render_snapshots__snapshot_input_command_hint_confirm.snap  tests__snapshots__render_snapshots__snapshot_input_command_hint_hidden_when_arg_typed.snap  tests__snapshots__render_snapshots__snapshot_input_command_hint_no_hint_for_parameterless.snap  tests__snapshots__render_snapshots__snapshot_input_command_hint_rename.snap  tests__snapshots__render_snapshots__snapshot_input_command_hint_theme.snap  tests__snapshots__render_snapshots__snapshot_input_cursor_at_start.snap  tests__snapshots__render_snapshots__snapshot_input_empty.snap  (+32 more)
tests/unit/: events.rs  formatting.rs  helpers.rs  llm.rs  metrics.rs  mod.rs  types.rs
web/: index.html
